<?xml version="1.0"?>
<package format="2">
  <name>python-statsd</name>
  <version>2.1.1</version>
  <description>Python Client for the Etsy NodeJS Statsd Server </description>
  <maintainer email="Wolph@wol.ph">Rick van Hattem</maintainer>
  <license>BSD License</license>

  <buildtool_depend>python</buildtool_depend>

  <export><build_type>python</build_type></export>
</package>

